<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/ivSinInLogo"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:src="@drawable/sin_in_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/sign_in_image_description" />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/sign_in_title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivSinInLogo"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_message"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:boxCornerRadiusBottomEnd="@dimen/til_radius"
            app:boxCornerRadiusBottomStart="@dimen/til_radius"
            app:boxCornerRadiusTopEnd="@dimen/til_radius"
            app:boxCornerRadiusTopStart="@dimen/til_radius"
            style="@style/CustomTextInputLayoutStyle"
            app:boxStrokeColor="@color/textinput_border_focused"
            app:hintTextColor="@color/nav_unselected"
            android:hint="@string/sign_in_phone_hint"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:helperTextEnabled="false">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSignInPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="64dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="10"
                android:textSize="@dimen/et_text_size"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendOtp"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:backgroundTint="@color/button_primary"
        android:text="@string/sign_in_send_otp_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="64dp"
        android:gravity="center"
        android:elevation="2dp"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>